test/src/e2e_vm_tests/test_programs/should_pass/language/predicate_with_loop/src/main.sw
predicate;

fn main() -> bool {
    let mut a = 10;
    while a != 0 {
        a -= 1;
    }
    true
}
