test/src/e2e_vm_tests/test_programs/should_fail/recover_unexpected_close_delim/src/main.sw
contract;

fn a() -> bool {
    0 // recovery witness
}

} // Lexer recovery.
